--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 				<div class="tab-pane active" id="first-tab-alt">
 					<div class="section-content row">
 						<div class="col-sm-6 animated" data-delay="200" data-duration="700" data-animation="fadeInLeft">
-							<img src="assets/img/features/people.jpg" class="img-responsive" alt="process 3" />
+							<!-- <img src="assets/img/features/people.jpg" class="img-responsive" alt="process 3" /> -->
+							<!-- <iframe id="leaderboardResults" src="http://localhost:3000/embed.html?heat=http%3A%2F%2Flocalhost%3A3000%2Fcompetitions%2F1%2Fevents%2F3%2Fheats%2F2" height="500px" width="100%" frameBorder="0"></iframe> -->
 						</div>
 						<div class="col-sm-6 animated" data-delay="200" data-duration="700" data-animation="fadeInRight">
 							<br/>
